--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	<section class="work">
 		<h2>Work</h2>
 		<section class="project">
-			<h3 id="special">Airplane Route</h3>
-			<a target="_blank" href="https://example.com/">View this work</a>
+			<section class="project-dijkstra">
+			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath"><h3>Airplane Route</h3></a>
+			<p>Simulate with the raw airline data to find the shortest path between airports by using Dijkstra algorithm in c++ and QtGUI</p>
+			</section>
 		</section><section class="project">
 			<h3>Project B</h3>
 			<a target="_blank" href="https://example.com">View this work</a>
