--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
 </head>
 <body>
 	<section class= "intro">
+		<section class = "menu-bar">
+		<ul class="side-menu">
+			<li class="menu-direction"><a href="">Home</a></li>
+			<li class="menu-direction"><a href="">Projects</a></li>
+			<li class="menu-direction"><a href="">Contact</a></li>
+			<li class="menu-direction"><a href="">About</a></li>
+		</ul>
+		</section>
 		<section class="intro-text">
 			<h2>Titichot</h2>
 			<p>I am a computer science major student at Cal Poly Pomona</p>
 		</section>
 	</section>
 	<section class="work">
-		<h2>Work</h2>
-		<section class="project">
-			<section class="project-dijkstra">
-			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath"><h3>Airplane Route</h3></a>
-			<p>Simulate with the raw airline data to find the shortest path between airports by using Dijkstra algorithm in c++ and QtGUI</p>
-			</section>
-		</section><section class="project">
-			<h3>Project B</h3>
-			<a target="_blank" href="https://example.com">View this work</a>
+		<h1>Projects</h1>
+		<section class="project" id="project-dijkstra">
+			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath"><h3>Airplane Route</h3>
+			<p>Simulate with the raw airline data to find the shortest path between airports by using Dijkstra algorithm in c++ and QtGUI</p></a>
+		</section><section class="project" id="project-graphing-cal">
+			<h3>Graphing Calculator</h3>
+			<a target="_blank" href="https://github.com/tnleang/graphingCalculator">View this work</a>
 		</section>
 	</section>
 	<section class="contact">
