--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Your Name Portfolio</title>
+	<title>Nuntapramote Titichot</title>
 	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
