--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
 		</section>
 	</section>
 
-	<!-- The Projects Sestion -->
+	<!-- The Projects Section -->
 	<section class="work">
 		<section class="project" id="project-dijkstra">
-			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath"><h3>Airplane Route</h3>
-			<p>Simulate with the raw airline data to find the shortest path between airports by using Dijkstra algorithm in c++ and QtGUI</p></a>
+			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath">Airplane Route</a>
 		</section><section class="project" id="project-graphing-cal">
 			<a class="project-graphing-cal-link" target="_blank" href="https://github.com/tnleang/graphingCalculator">Graphing Calculator</a>
 		</section>
 	</section>
 
-	<!-- Profile Sestion -->
+	<!-- Profile Scstion -->
+	<section class="profile">
+
+	</section>
+	<!-- Contact Scstion -->
 	<!-- need fix on the style for the contact form -->
 	<!-- might add the profile next to it too -->
 	<section class="contact">
