some files changes
Prior to this change,

This change

--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 	</section>
 
 	<!-- The Projects Section -->
-	<section class="work" id='projects'>
-		<section class="project" id="project-dijkstra">
-			<a target="_blank" href="https://github.com/tnleang/airphaneDijkstraShortestPath">Airplane Route</a>
-		</section><section class="project" id="project-graphing-cal">
-			<a class="project-graphing-cal-link" target="_blank" href="https://github.com/tnleang/graphingCalculator">Graphing Calculator</a>
+	<section class="projects">
+		<section class="otus-site-project">
+			<img src="otus-site.png" alt="otus-site" class="otus-photo">
+		</section>
+		<section class="otus-site-text">
+			<h2>Otus Thai Kitchen and Coffee Website</h2>
+			<p>creating a static webpage for a local reastuarant using React.js. It is currently on the developemnt phrase. Link will be availible after deploying the project.</p>
 		</section>
 	</section>
 
