--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
 
 	<!-- The Projects Section -->
 	<section class="projects">
-		<section class="otus-site-project">
-
+		<section class="cotrack">
+			<h2 class="cotrack-intro">CoTrack</h2>
+			<p class="cotrack-text">Know more about COVID-19 and protect yourself</p>
+			<section style="margin-top: 10rem;">
+				<input type="image" class="google-play-image" alt="" src="google-play-badge.png">
+			</section>	
 		</section>
-		<section class="otus-site-text">
-			<h2>Otus Thai Kitchen and Coffee Website</h2>
-			<p>creating a static webpage for a local reastuarant using React.js. It is currently on the developemnt phrase. Link will be availible after deploying the project.</p>
+		<section style="padding: 10%;">
+			<img src="sample-image-cotrack.png" class="cotrack-img">
 		</section>
 	</section>
 
